(fix):change img header and footer

--- a/59BBajaDeServicio.html
+++ b/59BBajaDeServicio.html
@@ -35,7 +35,7 @@
             <td width="612" bgcolor="#ffffff">
               <img
                 style="display: block"
-                src="https://d3jx1664xx9tr2.cloudfront.net/assets/Agosto2025/MailingNotification/header.png"
+                src="https://d3jx1664xx9tr2.cloudfront.net/assets/Agosto2025/MailingNotification/HeaderFiscal.jpg"
                 width="612"
                 height="160"
                 border="0"
@@ -136,7 +136,7 @@
             <td>
               <a href="tel:5540004000" target="_blank"
                 ><img
-                  src="https://d3jx1664xx9tr2.cloudfront.net/assets/Agosto2025/MailingNotification/footer_banner.png"
+                  src="https://d3jx1664xx9tr2.cloudfront.net/assets/Agosto2025/MailingNotification/FooterFiscal.jpg"
                   alt="Footer"
                   width="612"
               /></a>
