(fix):change img header and footer

--- a/46ABienvenidaANOW.html
+++ b/46ABienvenidaANOW.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
-    <title>compra realizada_invex</title>
+    <title>Bienvenida a Now</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -89,7 +89,7 @@
                       style="
                         border-collapse: collapse;
                         width: 100%;
-                        margin: 0px auto 22px;
+                        margin: 0px auto 0px;
                         text-align: center;
                       "
                     >
@@ -104,7 +104,7 @@
                             "
                           >
                             Nos da mucho gusto que seas parte de la
-                            <strong>familia Now</strong>.
+                            <strong>familia Now de INVEX Banco</strong>.
                           </p>
                           <p
                             style="
@@ -133,6 +133,7 @@
                               font-size: 20px;
                               color: #000000;
                               text-align: center;
+                              margin-top: 45px;
                             "
                           >
                             ¡Conoce el neobanco del ahora!
