--- a/47AProcesoDeValidacionDeDocumentacionN4.html
+++ b/47AProcesoDeValidacionDeDocumentacionN4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
-    <title>compra realizada_invex</title>
+    <title>47A Proceso De Validacion De Documentacion N4</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -103,7 +103,7 @@
                               font-weight: bold;
                             "
                           >
-                            00000
+                            ${codigo_OTP}
                           </p>
                         </td>
                       </tr>
