--- a/49BConfiguracionNIP.html
+++ b/49BConfiguracionNIP.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
-    <title>compra realizada_invex</title>
+    <title>49B Configuracion NIP</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -92,11 +92,13 @@
                               padding: 0 0 10px;
                             "
                           >
-                            Se ha cambiado con éxito el NIP de tu Tarjeta de
-                            Débito Now terminación <br />
-                            <strong>[XXXX]</strong>. Es probable que en tu
-                            primera compra se requiera firma, a partir <br />de
-                            la segunda ya podrás utilizar tu nuevo NIP.
+                            Se ha cambiado con éxito el NIP de tu
+                            <strong>Tarjeta de Débito Now</strong> terminación
+                            <br />
+                            <strong>${terminacion_tarjeta}</strong>. Es probable
+                            que en tu primera compra se <br />requiera firma, a
+                            partir de la segunda ya podrás utilizar tu nuevo
+                            NIP.
                           </p>
                           <p
                             style="
@@ -148,7 +150,7 @@
                               text-align: right;
                             "
                           >
-                            $[dd/mm/aaaa]
+                            ${fecha}
                           </p>
                         </td>
                       </tr>
@@ -175,7 +177,7 @@
                               text-align: right;
                             "
                           >
-                            $[hh:mm]
+                            ${hora}
                           </p>
                         </td>
                       </tr>
