--- a/57BDepositoPorNomina.html
+++ b/57BDepositoPorNomina.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
-    <title>compra realizada_invex</title>
+    <title>57B Deposito Por Nomina</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -95,7 +95,7 @@
                           >
                             Has recibido un depósito en tu cuenta de Débito
                             <br />con terminación
-                            <strong>$[terminacion_cuenta_abono]</strong>.
+                            <strong>${terminacion_cuenta}</strong>.
                           </p>
 
                           <p
@@ -148,7 +148,7 @@
                               text-align: right;
                             "
                           >
-                            $[banco_de_origen]
+                            ${banco_de_origen}
                           </p>
                         </td>
                       </tr>
@@ -175,7 +175,7 @@
                               text-align: right;
                             "
                           >
-                            $[nombre_remitente]
+                            ${nombre_remitente}
                           </p>
                         </td>
                       </tr>
@@ -202,7 +202,7 @@
                               text-align: right;
                             "
                           >
-                            $[monto]
+                            ${monto}
                           </p>
                         </td>
                       </tr>
@@ -229,7 +229,7 @@
                               text-align: right;
                             "
                           >
-                            $[concepto_de_pago]
+                            ${concepto_pago}
                           </p>
                         </td>
                       </tr>
@@ -256,7 +256,7 @@
                               text-align: right;
                             "
                           >
-                            $[dd/mm/aaaa]
+                            ${fecha}
                           </p>
                         </td>
                       </tr>
@@ -283,7 +283,7 @@
                               text-align: right;
                             "
                           >
-                            $[hora_transaccion]
+                            ${hora}
                           </p>
                         </td>
                       </tr>
