--- a/59AAltaDeServicio.html
+++ b/59AAltaDeServicio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
-    <title>compra realizada_invex</title>
+    <title>59A Alta De Servicio</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -93,7 +93,7 @@
                             "
                           >
                             Se ha vinculado exitosamente el servicio
-                            <strong>$[nombre_servicio_o_compañia]</strong>
+                            <strong>${nombre_servicio}</strong>
                             <br />y podrás pagarlo de manera fácil y rápida
                             desde Now.
                           </p>
