--- a/59BBajaDeServicio.html
+++ b/59BBajaDeServicio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
-    <title>compra realizada_invex</title>
+    <title>59B Baja De Servicio</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -93,8 +93,8 @@
                             "
                           >
                             El servicio
-                            <strong>$[nombre_del_servicio]</strong> se
-                            desvinculó con éxito.
+                            <strong> ${nombre_servicio} </strong> se desvinculó
+                            con éxito.
                           </p>
                           <p
                             style="
